# docs/swagger.json
@@ -19,6 +19,13 @@
                     },
                     {
                         "type": "string",
+                        "description": "country",
+                        "name": "country",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "currency",
                         "name": "currency",
                         "in": "query",
